# github-dependency-analyzer

./: README.md  main.py  pyproject.toml
