[tool.poetry]
name = "github-dependency-analyzer"
version = "0.1.0"
description = "A tool to analyze dependencies between GitHub repositories."
authors = ["Kev Jackson <foamdino@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/github-dependency-analyzer"
repository = "https://github.com/yourusername/github-dependency-analyzer"
documentation = "https://github.com/yourusername/github-dependency-analyzer/wiki"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
